Scrollbar issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ html,
 body {
   font-size: 10px;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .heading {
